--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -24,6 +24,12 @@ jobs:
         submodules: recursive
         fetch-depth: 0
         
+    - name: Install Package
+      if: runner.os == 'Linux'
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y libudev-dev
+        
     - name: Install Conan
       uses: turtlebrowser/get-conan@v1.0
 
