Update dependency versions, link linux build to hidraw, fix linux build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.18)
+cmake_minimum_required(VERSION 3.16.3)
 project(screamdeck VERSION 0.1.0 DESCRIPTION "C library for fast output to Elgato Streamdeck display")
 
 list(APPEND CMAKE_MODULE_PATH ${CMAKE_BINARY_DIR})
@@ -14,11 +14,12 @@ endif()
 
 include(${CMAKE_BINARY_DIR}/conan.cmake)
 
-conan_cmake_configure(REQUIRES hidapi/0.12.0
-							   libjpeg-turbo/2.1.4
+conan_cmake_configure(REQUIRES hidapi/0.13.1
+							   libjpeg-turbo/2.1.5
 							   xxhash/0.8.1
 					  IMPORTS "bin, *.dll -> ./"
-					  GENERATORS cmake_find_package)
+					  GENERATORS cmake_find_package
+					  OPTIONS )
 
 conan_cmake_autodetect(settings)
 
@@ -28,7 +29,7 @@ conan_cmake_install(PATH_OR_REFERENCE .
                     SETTINGS ${settings})
 
 find_package(hidapi)
-find_package(libjpeg-turbo)
+find_package(JPEG)
 find_package(xxHash)
 
 add_library(screamdeck SHARED)
@@ -38,18 +39,20 @@ set_target_properties(screamdeck PROPERTIES SOVERSION 1)
 set_target_properties(screamdeck PROPERTIES PUBLIC_HEADER include/screamdeck.h)
 
 target_include_directories(screamdeck PUBLIC
-
 	"include"
-
 )
 
 target_sources(screamdeck PRIVATE
-
 	"src/screamdeck.c"
-
 	"example/screamdeck_example.c")
 
-target_link_libraries(screamdeck PRIVATE hidapi::hidapi libjpeg-turbo::turbojpeg-static xxHash::xxhash)
+target_link_libraries(screamdeck PRIVATE JPEG::turbojpeg-static xxHash::xxhash)
+
+if(UNIX AND NOT APPLE)
+	target_link_libraries(screamdeck PRIVATE hidapi::hidraw)
+else()
+	target_link_libraries(screamdeck PRIVATE hidapi::hidapi)
+endif()
 
 if (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
 	target_link_options(screamdeck PRIVATE "-Wl,--exclude-libs,ALL")
@@ -57,8 +60,11 @@ endif()
 
 add_executable(screamdeck_example)
 
-target_link_libraries(screamdeck_example PUBLIC libjpeg-turbo::turbojpeg-static screamdeck)
+target_link_libraries(screamdeck_example PUBLIC JPEG::turbojpeg-static screamdeck)
+
+if(UNIX AND NOT APPLE)
+	target_link_libraries(screamdeck_example PRIVATE udev)
+endif()
 
 target_sources(screamdeck_example PRIVATE
-
 	"example/screamdeck_example.c")
