--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -21,6 +21,8 @@ jobs:
           arch: x64
         - os: macos-latest
           arch: x64
+        - os: macos-14
+          arch: arm64
         - os: ubuntu-latest
           arch: x64
         - os: ubuntu-latest
@@ -112,6 +114,7 @@ jobs:
           name: |
             windows-latest_x64_package
             macos-latest_x64_package
+            macos-14_arm64_package
             ubuntu-latest_x64_package
             ubuntu-latest_arm64_package
             ubuntu-latest_arm_package
@@ -123,6 +126,8 @@ jobs:
           cp -r windows-latest_x64_package/build/* ~/package/screamdeck/bin/win_x64
           mkdir -p ~/package/screamdeck/bin/macos_x64
           cp macos-latest_x64_package/build/* ~/package/screamdeck/bin/macos_x64
+          mkdir -p ~/package/screamdeck/bin/macos_arm64
+          cp macos-14_arm64_package/build/* ~/package/screamdeck/bin/macos_arm64
           mkdir -p ~/package/screamdeck/bin/linux_x64
           cp ubuntu-latest_x64_package/build/* ~/package/screamdeck/bin/linux_x64
           mkdir -p ~/package/screamdeck/bin/linux_arm64
